<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="membersViewModel"
            type="com.example.test.screens.members.MemberViewModel" />

        <variable
            name="virtualMachineListViewModel"
            type="com.example.test.screens.virtual_machines.VirtualMachineListViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="56dp"
        tools:context=".membersFragment">

        <TextView
            android:id="@+id/textview_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/asap"
            android:text="@{membersViewModel.member.name}"
            android:textSize="34sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider4"
            tools:text="naam" />

        <TextView
            android:id="@+id/textview_backupcontact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:fontFamily="@font/asap"
            android:text="@{membersViewModel.member.role.name()}"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_backupcontact_label"
            tools:text="role" />

        <TextView
            android:id="@+id/textview_backupcontact_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginTop="22dp"
            android:fontFamily="@font/asap"
            android:text="@string/Rol"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

        <TextView
            android:id="@+id/tetview_email_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginTop="17dp"
            android:fontFamily="@font/asap"
            android:text="@string/email"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider3" />

        <TextView
            android:id="@+id/textview_department_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:fontFamily="@font/asap"
            android:text="@string/Departement"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textview_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/asap"
            android:text="@{membersViewModel.member.email}"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tetview_email_label"
            tools:text="email" />

        <TextView
            android:id="@+id/textview_department"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/asap"
            android:text="@{membersViewModel.member.department.name()}"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/textview_department_label"
            app:layout_constraintTop_toBottomOf="@+id/textview_department_label"
            tools:text="department" />


        <View
            android:id="@+id/divider"
            android:layout_width="328dp"
            android:layout_height="3dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="156dp"
            android:layout_marginEnd="30dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/divider3"
            android:layout_width="328dp"
            android:layout_height="3dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="30dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_department" />

        <View
            android:id="@+id/divider2"
            android:layout_width="322dp"
            android:layout_height="3dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="30dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_backupcontact" />

        <View
            android:id="@+id/divider4"
            android:layout_width="0dp"
            android:layout_height="5dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="15dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider2" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>